--- a/app/views/ticket.html
+++ b/app/views/ticket.html
@@ -19,8 +19,7 @@
     <!-- Custom styles for this template -->
     <link href="../css/style.css" rel="stylesheet">
 </head>
-<body class="">
-
+<body>
 <div id="wrapper">
 
     <nav class="navbar-default navbar-static-side" role="navigation">
@@ -45,16 +44,23 @@
                         IN+
                     </div>
                 </li>
-                <li>
-                    <a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboards</span> <span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="">Cenas</a></li>
-                        <li><a href="">Cenas v.2</a></li>
-                        <li><a href="">Cenas v.3</a></li>
-                        <li><a href="">Cenas v.4</a></li>
-                        <li><a href="">Cenas v.5 </a></li>
-                    </ul>
+                <li class="active">
+                    <a href="grid_options.html"><i class="fa fa-slideshare"></i> <span class="nav-label">Create help request</span></a>
                 </li>
+
+                <li>
+                    <a href="grid_options.html"><i class="fa fa-handshake-o"></i> <span class="nav-label">Create Offer</span></a>
+                </li>
+
+
+                <li>
+                    <a href="grid_options.html"><i class="fa fa-plus-square"></i> <span class="nav-label">See Offers</span></a>
+                </li>
+
+                <li>
+                    <a href="grid_options.html"><i class="fa fa-plus-square-o"></i> <span class="nav-label">See Help Requests </span></a>
+                </li>
+
             </ul>
 
         </div>
@@ -62,7 +68,7 @@
 
     <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom">
-            <nav class="navbar navbar-static-top  " role="navigation" style="margin-bottom: 0">
+            <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
                 <div class="navbar-header">
                     <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
                     <form role="search" class="navbar-form-custom" action="search_results.html">
@@ -182,84 +188,55 @@
             </nav>
         </div>
 
-
-        <div class="wrapper wrapper-content  animated fadeInRight">
+        <div class="wrapper wrapper-content  animated fadeInRight article">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-10 col-lg-offset-1">
                     <div class="ibox">
                         <div class="ibox-content">
-                            <div class="row"> <h3 class="col-lg-6">Offer</h3>
-                                <a class="col-lg-6 text-right">See more</a> </div>
-                            <ul class="sortable-list connectList agile-list" id="todo">
-                                <li class="info-element" id="task1">
-                                    Simply dummy text of the printing and typesetting industry.
-                                    <div class="row">
-                                        <div class="agile-detail col-lg-2">
-                                            <strong>AUTOR</strong>
-                                        </div>
-                                        <div class="agile-detail col-lg-3">
-                                            <i class="fa fa-clock-o"></i> DATA
-                                        </div>
-                                        <div class="agile-detail col-lg-4">
-                                            <i class="fa fa-map-marker"></i> LOCALIZACAO
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
+                            <div class="text-center article-title">
+                                <h1>
+                                    Behind the word mountains
+                                </h1>
+                                <strong>AUTOR</strong> <span class="text-muted"><i class="fa fa-clock-o"></i> 28th Oct 2015 <i class="fa fa-map-marker"></i> LOCALIZACAO</span>
+                            </div>
+                            <p>
+                                Many desktop publishing packages and web page editors now use <strong>Lorem Ipsum as their default model text</strong>, and a search for 'lorem ipsum' will uncover many web
+                            </p>
+                            <p>
+                                One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's happened to me?" he thought. It wasn't a dream. His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table - Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine and housed in a nice, gilded frame. It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her lower arm towards the viewer. Gregor then turned to look out the window at the dull weather. Drops
+                            </p>
+                            <hr>
+                            <div class="text-right"> <button class="btn btn-white btn-xs" type="button">Contact</button></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="ibox">
-                        <div class="ibox-content">
-                            <div class="row"> <h3 class="col-lg-6">Help Request</h3>
-                                <a class="col-lg-6 text-right">See more</a> </div>
-                            <ul class="sortable-list connectList agile-list" id="inprogress">
-                                <li class="success-element" id="task9">
-                                    Quisque venenatis ante in porta suscipit.
-                                    <div class="row">
-                                        <div class="agile-detail col-lg-2">
-                                            <strong>AUTOR</strong>
-                                        </div>
-                                        <div class="agile-detail col-lg-3">
-                                            <i class="fa fa-clock-o"></i> DATA
-                                        </div>
-                                        <div class="agile-detail col-lg-4">
-                                            <i class="fa fa-map-marker"></i> LOCALIZACAO
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
             </div>
 
-
-
-            <div class="footer">
-                <div class="pull-right">
-                    10GB of <strong>250GB</strong> Free.
-                </div>
-                <div>
-                    <strong>Copyright</strong> Example Company &copy; 2014-2017
-                </div>
-            </div>
 
         </div>
+        <div class="footer">
+            <div class="pull-right">
+                10GB of <strong>250GB</strong> Free.
+            </div>
+            <div>
+                <strong>Copyright</strong> Example Company &copy; 2014-2017
+            </div>
+        </div>
+
     </div>
+</div>
 
-    <!-- Mainly scripts -->
-    <script src="../js/jquery-3.1.1.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="../js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
-    <!-- Custom and plugin javascript -->
-    <script src="../js/inspinia.js"></script>
-    <script src="../js/plugins/pace/pace.min.js"></script>
 
+<!-- Mainly scripts -->
+<script src="../js/jquery-3.1.1.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script src="../js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+
+<!-- Custom and plugin javascript -->
+<script src="../js/inspinia.js"></script>
+<script src="../js/plugins/pace/pace.min.js"></script>
 
 </body>
 
