--- a/app/views/listall.html
+++ b/app/views/listall.html
@@ -19,7 +19,7 @@
     <!-- Custom styles for this template -->
     <link href="../css/style.css" rel="stylesheet">
 </head>
-<body class="">
+<body>
 
 <div id="wrapper">
 
@@ -45,16 +45,23 @@
                         IN+
                     </div>
                 </li>
-                <li>
-                    <a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboards</span> <span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="">Cenas</a></li>
-                        <li><a href="">Cenas v.2</a></li>
-                        <li><a href="">Cenas v.3</a></li>
-                        <li><a href="">Cenas v.4</a></li>
-                        <li><a href="">Cenas v.5 </a></li>
-                    </ul>
+                <li class="active">
+                    <a href="grid_options.html"><i class="fa fa-slideshare"></i> <span class="nav-label">Create help request</span></a>
                 </li>
+
+                <li>
+                    <a href="grid_options.html"><i class="fa fa-handshake-o"></i> <span class="nav-label">Create Offer</span></a>
+                </li>
+
+
+                <li>
+                    <a href="grid_options.html"><i class="fa fa-plus-square"></i> <span class="nav-label">See Offers</span></a>
+                </li>
+
+                <li>
+                    <a href="grid_options.html"><i class="fa fa-plus-square-o"></i> <span class="nav-label">See Help Requests </span></a>
+                </li>
+
             </ul>
 
         </div>
@@ -62,15 +69,7 @@
 
     <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom">
-            <nav class="navbar navbar-static-top  " role="navigation" style="margin-bottom: 0">
-                <div class="navbar-header">
-                    <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
-                    <form role="search" class="navbar-form-custom" action="search_results.html">
-                        <div class="form-group">
-                            <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
-                        </div>
-                    </form>
-                </div>
+            <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
                 <ul class="nav navbar-top-links navbar-right">
                     <li>
                         <span class="m-r-sm text-muted welcome-message">Welcome to INSPINIA+ Admin Theme.</span>
@@ -180,86 +179,122 @@
                 </ul>
 
             </nav>
+
+            <div class="wrapper  ">
+                <div class="ibox float-e-margins">
+                    <div class="ibox-title">
+                        <h5>Search</h5>
+                    </div>
+                    <div class="ibox-content">
+                        <form role="form" class="row">
+                            <div class="col-lg-2">
+                                <label for="exampleInputEmail2" class="sr-only">Email address</label>
+                                <input type="email" placeholder="Enter email" id="exampleInputEmail2"
+                                       class="form-control">
+                            </div>
+                            <div class="col-lg-2">
+                                <button data-toggle="dropdown" class=" col-lg-12 btn btn-white dropdown-toggle" type="button" aria-expanded="false">Action <span class="caret"></span></button>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </div>
+
+                            <button class="col-lg-4 btn btn-white" type="submit">Sign in</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-
-
-        <div class="wrapper wrapper-content  animated fadeInRight">
+        <div class="wrapper wrapper-content  animated fadeInRight blog">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                     <div class="ibox">
                         <div class="ibox-content">
-                            <div class="row"> <h3 class="col-lg-6">Offer</h3>
-                                <a class="col-lg-6 text-right">See more</a> </div>
-                            <ul class="sortable-list connectList agile-list" id="todo">
-                                <li class="info-element" id="task1">
-                                    Simply dummy text of the printing and typesetting industry.
-                                    <div class="row">
-                                        <div class="agile-detail col-lg-2">
-                                            <strong>AUTOR</strong>
-                                        </div>
-                                        <div class="agile-detail col-lg-3">
-                                            <i class="fa fa-clock-o"></i> DATA
-                                        </div>
-                                        <div class="agile-detail col-lg-4">
-                                            <i class="fa fa-map-marker"></i> LOCALIZACAO
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
+                            <a href="article.html" class="btn-link">
+                                <h2>
+                                    One morning, when Gregor Samsa
+                                </h2>
+                            </a>
+                            <div class="small m-b-xs">
+                                <strong>AUTOR</strong> <span class="text-muted"><i class="fa fa-clock-o"></i> 28th Oct 2015 <i class="fa fa-map-marker"></i> LOCALIZACAO</span>
+                            </div>
+                            <p>
+                                English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web
+                            </p>
+                            <div class="text-right"> <button class="btn btn-white btn-xs" type="button">Match/help</button></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                     <div class="ibox">
                         <div class="ibox-content">
-                            <div class="row"> <h3 class="col-lg-6">Help Request</h3>
-                                <a class="col-lg-6 text-right">See more</a> </div>
-                            <ul class="sortable-list connectList agile-list" id="inprogress">
-                                <li class="success-element" id="task9">
-                                    Quisque venenatis ante in porta suscipit.
-                                    <div class="row">
-                                        <div class="agile-detail col-lg-2">
-                                            <strong>AUTOR</strong>
-                                        </div>
-                                        <div class="agile-detail col-lg-3">
-                                            <i class="fa fa-clock-o"></i> DATA
-                                        </div>
-                                        <div class="agile-detail col-lg-4">
-                                            <i class="fa fa-map-marker"></i> LOCALIZACAO
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
+                            <a href="article.html" class="btn-link">
+                                <h2>
+                                    Junk MTV quiz graced by fox whelps.
+                                </h2>
+                            </a>
+                            <div class="small m-b-xs">
+                                <strong>Adam Novak</strong> <span class="text-muted"><i class="fa fa-clock-o"></i> 28th Oct 2015 <i class="fa fa-map-marker"></i> LOCALIZACAO</span>
+                            </div>
+                            <p>
+                                Alex Trebek's fun TV quiz game. Woven silk pyjamas exchanged for blue quartz. Brawny gods just zebra, and my wolves quack! Blowzy red vixens fight for a quick.
+                            </p>
+                            <p>
+                                On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the.
+                            </p>
+                            <div class="text-right"> <button class="btn btn-white btn-xs" type="button">Match/help</button></div>
                         </div>
                     </div>
                 </div>
-
+                <div class="col-lg-4">
+                    <div class="ibox">
+                        <div class="ibox-content">
+                            <a href="article.html" class="btn-link">
+                                <h2>
+                                    The European languages are members
+                                </h2>
+                            </a>
+                            <div class="small m-b-xs">
+                                <strong>Adam Novak</strong> <span class="text-muted"><i class="fa fa-clock-o"></i> 28th Oct 2015 <i class="fa fa-map-marker"></i> LOCALIZACAO</span>
+                            </div>
+                            <p>
+                                The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.
+                            </p>
+                            <div class="text-right"> <button class="btn btn-white btn-xs" type="button">Match/help</button></div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-
-
-            <div class="footer">
-                <div class="pull-right">
-                    10GB of <strong>250GB</strong> Free.
-                </div>
-                <div>
-                    <strong>Copyright</strong> Example Company &copy; 2014-2017
-                </div>
-            </div>
 
         </div>
+        <div class="footer">
+            <div class="pull-right">
+                10GB of <strong>250GB</strong> Free.
+            </div>
+            <div>
+                <strong>Copyright</strong> Example Company &copy; 2014-2017
+            </div>
+        </div>
+
     </div>
+</div>
 
-    <!-- Mainly scripts -->
-    <script src="../js/jquery-3.1.1.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="../js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
-    <!-- Custom and plugin javascript -->
-    <script src="../js/inspinia.js"></script>
-    <script src="../js/plugins/pace/pace.min.js"></script>
 
+<!-- Mainly scripts -->
+<script src="../js/jquery-3.1.1.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script src="../js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+
+<!-- Custom and plugin javascript -->
+<script src="../js/inspinia.js"></script>
+<script src="../js/plugins/pace/pace.min.js"></script>
 
 </body>
 
