--- a/app/views/ticketView.html
+++ b/app/views/ticketView.html
@@ -19,7 +19,8 @@
     <!-- Custom styles for this template -->
     <link href="../css/style.css" rel="stylesheet">
 </head>
-<body class="">
+
+<body>
 
 <div id="wrapper">
 
@@ -45,16 +46,23 @@
                         IN+
                     </div>
                 </li>
-                <li>
-                    <a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboards</span> <span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="">Cenas</a></li>
-                        <li><a href="">Cenas v.2</a></li>
-                        <li><a href="">Cenas v.3</a></li>
-                        <li><a href="">Cenas v.4</a></li>
-                        <li><a href="">Cenas v.5 </a></li>
-                    </ul>
+                <li class="active">
+                    <a href="grid_options.html"><i class="fa fa-slideshare"></i> <span class="nav-label">Create help request</span></a>
                 </li>
+
+                <li>
+                    <a href="grid_options.html"><i class="fa fa-handshake-o"></i> <span class="nav-label">Create Offer</span></a>
+                </li>
+
+
+                <li>
+                    <a href="grid_options.html"><i class="fa fa-plus-square"></i> <span class="nav-label">See Offers</span></a>
+                </li>
+
+                <li>
+                    <a href="grid_options.html"><i class="fa fa-plus-square-o"></i> <span class="nav-label">See Help Requests </span></a>
+                </li>
+
             </ul>
 
         </div>
@@ -62,7 +70,7 @@
 
     <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom">
-            <nav class="navbar navbar-static-top  " role="navigation" style="margin-bottom: 0">
+            <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
                 <div class="navbar-header">
                     <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
                     <form role="search" class="navbar-form-custom" action="search_results.html">
@@ -181,85 +189,104 @@
 
             </nav>
         </div>
-
-
-        <div class="wrapper wrapper-content  animated fadeInRight">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="ibox">
-                        <div class="ibox-content">
-                            <div class="row"> <h3 class="col-lg-6">Offer</h3>
-                                <a class="col-lg-6 text-right">See more</a> </div>
-                            <ul class="sortable-list connectList agile-list" id="todo">
-                                <li class="info-element" id="task1">
-                                    Simply dummy text of the printing and typesetting industry.
-                                    <div class="row">
-                                        <div class="agile-detail col-lg-2">
-                                            <strong>AUTOR</strong>
-                                        </div>
-                                        <div class="agile-detail col-lg-3">
-                                            <i class="fa fa-clock-o"></i> DATA
-                                        </div>
-                                        <div class="agile-detail col-lg-4">
-                                            <i class="fa fa-map-marker"></i> LOCALIZACAO
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="ibox">
-                        <div class="ibox-content">
-                            <div class="row"> <h3 class="col-lg-6">Help Request</h3>
-                                <a class="col-lg-6 text-right">See more</a> </div>
-                            <ul class="sortable-list connectList agile-list" id="inprogress">
-                                <li class="success-element" id="task9">
-                                    Quisque venenatis ante in porta suscipit.
-                                    <div class="row">
-                                        <div class="agile-detail col-lg-2">
-                                            <strong>AUTOR</strong>
-                                        </div>
-                                        <div class="agile-detail col-lg-3">
-                                            <i class="fa fa-clock-o"></i> DATA
-                                        </div>
-                                        <div class="agile-detail col-lg-4">
-                                            <i class="fa fa-map-marker"></i> LOCALIZACAO
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+        <div class="row wrapper border-bottom white-bg page-heading">
+            <div class="col-lg-10">
+                <h2>Profile</h2>
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a>Extra Pages</a>
+                    </li>
+                    <li class="active">
+                        <strong>Profile</strong>
+                    </li>
+                </ol>
+            </div>
+            <div class="col-lg-2">
 
             </div>
-
-
-
-            <div class="footer">
-                <div class="pull-right">
-                    10GB of <strong>250GB</strong> Free.
-                </div>
-                <div>
-                    <strong>Copyright</strong> Example Company &copy; 2014-2017
-                </div>
-            </div>
-
         </div>
+        <div class="wrapper wrapper-content">
+            <div class="animated fadeInRight">
+                <div class="mail-box-header">
+                    <div class="pull-right tooltip-demo">
+                        <a href="mail_compose.html" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="" data-original-title="Reply"><i class="fa fa-reply"></i> Reply</a>
+                    </div>
+                    <h2>
+                        View Message
+                    </h2>
+                    <div class="mail-tools tooltip-demo m-t-md">
+
+
+                        <h3>
+                            <span class="font-normal">Subject: </span>Aldus PageMaker including versions of Lorem Ipsum.
+                        </h3>
+                        <h3>
+                            <span class="font-normal">Title: </span>Aldus PageMaker including versions of Lorem Ipsum.
+                        </h3>
+                        <h5>
+                            <span class="pull-right font-normal">10:15AM 02 FEB 2014</span>
+                            <span class="font-normal">From: </span>alex.smith@corporation.com
+                        </h5>
+                    </div>
+                </div>
+                <div class="mail-box">
+
+
+                    <div class="mail-body">
+                        <p>
+                            Hello Jonathan!
+                            <br>
+                            <br>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                            took a galley of type and scrambled it to make a type <strong>specimen book.</strong>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                            essentially unchanged.
+                        </p>
+                        <p>
+                            It was popularised in the 1960s with the release <a href="#" class="text-navy">Letraset sheets</a>  containing Lorem Ipsum passages, and more recently with desktop publishing software
+                            like Aldus PageMaker including versions of Lorem Ipsum.
+                        </p>
+                        <p>
+                            There are many variations of passages of <strong>Lorem Ipsum</strong>Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of.
+                        </p>
+                    </div>
+
+
+                </div>
+
+            </div>
+        </div>
+        <div class="footer">
+            <div class="pull-right">
+                10GB of <strong>250GB</strong> Free.
+            </div>
+            <div>
+                <strong>Copyright</strong> Example Company &copy; 2014-2017
+            </div>
+        </div>
+
     </div>
+</div>
 
-    <!-- Mainly scripts -->
-    <script src="../js/jquery-3.1.1.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="../js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
-    <!-- Custom and plugin javascript -->
-    <script src="../js/inspinia.js"></script>
-    <script src="../js/plugins/pace/pace.min.js"></script>
 
+<!-- Mainly scripts -->
+<script src="../js/jquery-3.1.1.min.js"></script>
+<script src="../js/bootstrap.js"></script>
+<script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script src="../js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+
+<!-- Custom and plugin javascript -->
+<script src="../js/inspinia.js"></script>
+<script src="../js/plugins/pace/pace.min.js"></script>
+
+<!-- Peity -->
+<script src="../js/plugins/peity/jquery.peity.min.js"></script>
+
+<!-- Peity -->
+<script src="../js/demo/peity-demo.js"></script>
 
 </body>
 
