--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,26 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<script src="../js/header.js"></script>
 
-    <title>INSPINIA - Landing Page</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Animation CSS -->
-    <link href="../css/animate.css" rel="stylesheet">
-    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
-</head>
 <body class="gray-bg">
-
 <div class="middle-box text-center loginscreen animated fadeInDown">
     <div>
         <div>
@@ -55,5 +35,4 @@
 <script src="../js/bootstrap.min.js"></script>
 
 </body>
-
 </html>
