--- a/app/views/listall.html
+++ b/app/views/listall.html
@@ -190,7 +190,7 @@
             </div>
         </div>
         <div class="wrapper wrapper-content  animated fadeInRight blog">
-            <div class="row">
+            <div id="row-ticket" class="row">
                 <div class="col-lg-4">
                     <div class="ibox">
                         <div class="ibox-content">
@@ -275,7 +275,7 @@
 <!-- Custom and plugin javascript -->
 <script src="../js/inspinia.js"></script>
 <script src="../js/plugins/pace/pace.min.js"></script>
-
+<script src="../js/listall.js"></script>
 </body>
 
 </html>
