--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,17 +3,9 @@
 <body class="gray-bg">
 <div class="middle-box text-center loginscreen animated fadeInDown">
     <div>
-        <div>
-
-            <h1 class="logo-name">IN+</h1>
-
-        </div>
         <h3>Welcome to OUR SITE</h3>
-        <p>Perfectly designed and precisely prepared admin theme with over 50 pages with extra new web app views.
-            <!--Continually expanded and constantly improved Inspinia Admin Them (IN+)-->
-        </p>
         <p>Login in. To see it in action.</p>
-        <form class="m-t" role="form" action="index.html">
+        <form class="m-t" role="form" action="../">
             <div class="form-group">
                 <input type="email" class="form-control" placeholder="Username" required="">
             </div>
@@ -22,11 +14,11 @@
             </div>
             <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
 
-            <a href="#"><small>Forgot password?</small></a>
             <p class="text-muted text-center"><small>Do not have an account?</small></p>
-            <a class="btn btn-sm btn-white btn-block" href="register.html">Create an account</a>
+            <a class="btn btn-sm btn-white btn-block" href="signup.html">Create an account</a>
+            <a class="btn btn-sm btn-white btn-block" href="../">Go back</a>
         </form>
-        <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
+        <p class="m-t"> <small>Level Up! &copy; 2017</small> </p>
     </div>
 </div>
 
