--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -1,14 +1,10 @@
 <script src="../js/header.js"></script>
+
 <body class="gray-bg">
 
-<div class="middle-box text-center loginscreen   animated fadeInDown">
+<div class="middle-box text-center loginscreen animated fadeInDown">
     <div>
-        <div>
-
-            <h1 class="logo-name">IN+</h1>
-
-        </div>
-        <h3>Register to IN+</h3>
+        <h3>Register to OUR SITE</h3>
         <p>Create account to see it in action.</p>
         <form class="m-t" role="form" action="login.html">
             <div class="form-group">
@@ -36,8 +32,9 @@
 
             <p class="text-muted text-center"><small>Already have an account?</small></p>
             <a class="btn btn-sm btn-white btn-block" href="login.html">Login</a>
+            <a class="btn btn-sm btn-white btn-block" href="../">Go back</a>
         </form>
-        <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
+        <p class="m-t"> <small>Level Up! &copy; 2017</small> </p>
     </div>
 </div>
 
