--- a/app/views/main.html
+++ b/app/views/main.html
@@ -170,21 +170,8 @@
                         <div class="ibox-content">
                             <div class="row"> <h3 class="col-lg-6">Offer</h3>
                                 <a class="col-lg-6 text-right">See more</a> </div>
-                            <ul class="sortable-list connectList agile-list" id="todo">
-                                <li class="info-element" id="task1">
-                                    Simply dummy text of the printing and typesetting industry.
-                                    <div class="row">
-                                        <div class="agile-detail col-lg-2">
-                                            <strong>AUTOR</strong>
-                                        </div>
-                                        <div class="agile-detail col-lg-3">
-                                            <i class="fa fa-clock-o"></i> DATA
-                                        </div>
-                                        <div class="agile-detail col-lg-4">
-                                            <i class="fa fa-map-marker"></i> LOCALIZACAO
-                                        </div>
-                                    </div>
-                                </li>
+                            <ul class="sortable-list connectList agile-list" id="offerList">
+
                             </ul>
                         </div>
                     </div>
@@ -194,21 +181,8 @@
                         <div class="ibox-content">
                             <div class="row"> <h3 class="col-lg-6">Help Request</h3>
                                 <a class="col-lg-6 text-right">See more</a> </div>
-                            <ul class="sortable-list connectList agile-list" id="inprogress">
-                                <li class="success-element" id="task9">
-                                    Quisque venenatis ante in porta suscipit.
-                                    <div class="row">
-                                        <div class="agile-detail col-lg-2">
-                                            <strong>AUTOR</strong>
-                                        </div>
-                                        <div class="agile-detail col-lg-3">
-                                            <i class="fa fa-clock-o"></i> DATA
-                                        </div>
-                                        <div class="agile-detail col-lg-4">
-                                            <i class="fa fa-map-marker"></i> LOCALIZACAO
-                                        </div>
-                                    </div>
-                                </li>
+                            <ul class="sortable-list connectList agile-list" id="helpList">
+
                             </ul>
                         </div>
                     </div>
@@ -239,7 +213,7 @@
     <!-- Custom and plugin javascript -->
     <script src="../js/inspinia.js"></script>
     <script src="../js/plugins/pace/pace.min.js"></script>
-
+    <script src="../js/main.js"></script>
 
 </body>
 
