--- a/app/views/createTicket.html
+++ b/app/views/createTicket.html
@@ -11,7 +11,11 @@
                             <img alt="image" class="img-circle" src="../img/profile_small.jpg" />
                              </span>
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">NOME DO GAJO</strong>
+                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold"><script type="text/javascript">
+                              $.get('/getUsername', function(data){
+                                return data;
+                              })
+                            </script></strong>
                              </span> <span class="text-muted text-xs block">PROFISSAO <b class="caret"></b></span> </span> </a>
                         <ul class="dropdown-menu animated fadeInRight m-t-xs">
                             <li><a href="profile.html">Profile</a></li>
