--- a/app/views/ticket.html
+++ b/app/views/ticket.html
@@ -213,6 +213,7 @@
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
 <script src="../js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+<script src="../js/getUrlParam.js"></script>
 
 <!-- Custom and plugin javascript -->
 <script src="../js/inspinia.js"></script>
