--- a/app/views/listall.html
+++ b/app/views/listall.html
@@ -30,17 +30,23 @@
                         </ul>
                     </div>
 
-                    <button class="col-lg-4 btn btn-white" type="submit">Sign in</button>
+                        <button class="col-lg-4 btn btn-white" type="submit">Sign in</button>
                 </form>
+
+                <div class="wrapper wrapper-content  animated fadeInRight blog">
+                    <div id="row-ticket" class="row">
+
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
+    <!-- footer.js -->
+    <script src="../js/footer.js"></script>
 </div>
 
-<!-- footer.js -->
-<script src="../js/footer.js"></script>
-</div>
-</div>
+
 
 
 
