--- a/app/views/createTicket.html
+++ b/app/views/createTicket.html
@@ -3,7 +3,6 @@
 
 <div id="wrapper">
 
-<<<<<<< HEAD
     <nav class="navbar-default navbar-static-side" role="navigation">
         <div class="sidebar-collapse">
             <ul class="nav metismenu" id="side-menu">
@@ -29,14 +28,13 @@
                     </div>
                 </li>
                 <li id="request_menu">
-                    <a href="grid_options.html"><i class="fa fa-slideshare"></i> <span class="nav-label">Create help request</span></a>
+                    <a onclick="window.location = '/createTicket?type=' + 'request'"><i class="fa fa-slideshare"></i> <span class="nav-label">Create help request</span></a>
                 </li>
 
                 <li id="offer_menu">
-                    <a href="grid_options.html"><i class="fa fa-handshake-o"></i> <span
+                    <a onclick="window.location = '/createTicket?type=' + 'offer'"><i class="fa fa-handshake-o"></i> <span
                             class="nav-label">Create Offer</span></a>
                 </li>
-
 
                 <li>
                     <a href="grid_options.html"><i class="fa fa-plus-square"></i> <span
@@ -174,40 +172,18 @@
                         </a>
                     </li>
                 </ul>
-=======
-    <!--sidebar-->
-    <script src="../js/sidebar.js"></script>
 
-    <!--body-->
-    <div class="wrapper wrapper-content">
-        <div class="row">
-            <div class="col-lg-12 animated fadeInRight">
-                <div class="mail-box-header">
-                    <h2>Create</h2>
-                </div>
-                <div class="mail-box">
+            </nav>
+        </div>
 
-                    <div class="mail-body">
-
-                        <form class="form-horizontal" method="get">
-                            <div class="form-group"><label class="col-sm-1 control-label">Title:</label>
-                                <div class="col-sm-10"><input type="text" class="form-control" value=""></div>
-                            </div>
-                            <div class="form-group"><label class="col-sm-1 control-label">Category:</label>
-                                <div class="col-sm-10"><input type="text" class="form-control" value=""></div>
-                            </div>
-                            <div class="form-group"><label class="col-sm-1 control-label">Localization:</label>
-                                <div class="col-sm-10"><input type="text" class="form-control" value=""></div>
-                            </div>
-                            <div class="form-group"><label class="col-sm-1 control-label">Description:</label>
-
-                                <div class="col-sm-10"><textarea class="form-control" rows="10" id="comment"></textarea></div>
-                            </div>
-                        </form>
->>>>>>> 33fb9e35d0cec337e3a93eae893ee98955370c36
-
+        <div class="wrapper wrapper-content">
+            <div class="row">
+                <div class="col-lg-12 animated fadeInRight">
+                    <div class="mail-box-header">
+                        <h2>
+                            Create
+                        </h2>
                     </div>
-<<<<<<< HEAD
                     <div class="mail-box">
 
 
@@ -239,24 +215,11 @@
                                 Create</a>
                         </div>
                         <div class="clearfix"></div>
-=======
-
-                    <div class="mail-body text-right tooltip-demo">
-                        <a href="mailbox.html" class="btn btn-sm btn-primary" data-toggle="tooltip" data-placement="top" title="Send"><i class="fa fa-reply"></i> Create</a>
-                        <a href="mailbox.html" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Discard email"><i class="fa fa-times"></i> Cancel</a>
->>>>>>> 33fb9e35d0cec337e3a93eae893ee98955370c36
                     </div>
-                    <div class="clearfix"></div>
-
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- footer.js -->
-    <script src="../js/footer.js"></script>
-
-</div>
 </div>
 
 <!-- Mainly scripts -->
@@ -286,19 +249,15 @@
 
 <script>
     function createTicket() {
-
         title = $("#ticket_title").val();
         category = $("#ticket_category").val();
         localization = $("#ticket_localization").val();
         desc = $("#ticket_description").val();
-
-
         if (ticket_type == 'offer') {
             path = '/addOferta'
         } else {
             path = '/addPedido'
         }
-
         $.ajax({
             type: 'post',
             url: path,
@@ -313,7 +272,6 @@
             }
         });
     }
-
 </script>
 
 
