--- a/app/views/listall.html
+++ b/app/views/listall.html
@@ -60,6 +60,7 @@
 <script src="../js/inspinia.js"></script>
 <script src="../js/plugins/pace/pace.min.js"></script>
 <script src="../js/listall.js"></script>
+<script src="../js/getUrlParam.js"></script>
 </body>
 
 </html>
