atualizacao do nome do site

--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -4,7 +4,7 @@
 
 <div class="middle-box text-center loginscreen animated fadeInDown">
     <div>
-        <h3>Register to OUR SITE</h3>
+        <h3>Register to Inneed</h3>
         <p>Create account to see it in action.</p>
         <form class="m-t" role="form" action="login.html">
             <div class="form-group">
@@ -31,8 +31,8 @@
             <button type="submit" class="btn btn-primary block full-width m-b">Register</button>
 
             <p class="text-muted text-center"><small>Already have an account?</small></p>
-            <a class="btn btn-sm btn-white btn-block" href="login.html">Login</a>
-            <a class="btn btn-sm btn-white btn-block" href="../">Go back</a>
+            <a class="btn btn-sm btn-white btn-block" href="login">Login</a>
+            <a class="btn btn-sm btn-white btn-block" href="index">Go back</a>
         </form>
         <p class="m-t"> <small>Level Up! &copy; 2017</small> </p>
     </div>
