--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,7 +3,7 @@
 <body class="gray-bg">
 <div class="middle-box text-center loginscreen animated fadeInDown">
     <div>
-        <h3>Welcome to OUR SITE</h3>
+        <h3>Welcome to Inneed</h3>
         <p>Login in. To see it in action.</p>
         <form class="m-t" role="form" action="../">
             <div class="form-group">
@@ -15,8 +15,8 @@
             <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
 
             <p class="text-muted text-center"><small>Do not have an account?</small></p>
-            <a class="btn btn-sm btn-white btn-block" href="signup.html">Create an account</a>
-            <a class="btn btn-sm btn-white btn-block" href="../">Go back</a>
+            <a class="btn btn-sm btn-white btn-block" href="signup">Create an account</a>
+            <a class="btn btn-sm btn-white btn-block" href="index">Go back</a>
         </form>
         <p class="m-t"> <small>Level Up! &copy; 2017</small> </p>
     </div>
