--- a/app/views/createTicket.html
+++ b/app/views/createTicket.html
@@ -56,7 +56,7 @@
                 <div class="navbar-header">
                     <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i>
                     </a>
-                    <form role="search" class="navbar-form-custom" action="search_results.html">
+                    <form role="search" class="navbar-form-custom">
                         <div class="form-group">
                             <input type="text" placeholder="Search for something..." class="form-control"
                                    name="top-search" id="top-search">
@@ -115,7 +115,7 @@
                             <li class="divider"></li>
                             <li>
                                 <div class="text-center link-block">
-                                    <a href="mailbox.html">
+                                    <a href="#">
                                         <i class="fa fa-envelope"></i> <strong>Read All Messages</strong>
                                     </a>
                                 </div>
@@ -128,7 +128,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-alerts">
                             <li>
-                                <a href="mailbox.html">
+                                <a href="#">
                                     <div>
                                         <i class="fa fa-envelope fa-fw"></i> You have 16 messages
                                         <span class="pull-right text-muted small">4 minutes ago</span>
@@ -137,26 +137,16 @@
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="profile.html">
+                                <a href="#">
                                     <div>
                                         <i class="fa fa-twitter fa-fw"></i> 3 New Followers
                                         <span class="pull-right text-muted small">12 minutes ago</span>
                                     </div>
                                 </a>
                             </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="grid_options.html">
-                                    <div>
-                                        <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                                        <span class="pull-right text-muted small">4 minutes ago</span>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="divider"></li>
                             <li>
                                 <div class="text-center link-block">
-                                    <a href="notifications.html">
+                                    <a href="#">
                                         <strong>See All Alerts</strong>
                                         <i class="fa fa-angle-right"></i>
                                     </a>
@@ -167,7 +157,7 @@
 
 
                     <li>
-                        <a href="login.html">
+                        <a href="/login">
                             <i class="fa fa-sign-out"></i> Log out
                         </a>
                     </li>
