search do listall mais uns redirects

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,7 +13,7 @@
                 <div class="ibox">
                     <div class="ibox-content">
                         <div class="row"> <h3 class="col-lg-6">Offer</h3>
-                            <a class="col-lg-6 text-right">See more</a> </div>
+                            <a class="col-lg-6 text-right" onclick="window.location = 'listall?type=offer'">See more</a> </div>
                         <ul class="sortable-list connectList agile-list" id="offerList">
                             <!-- e aqui tambem -->
                         </ul>
@@ -24,7 +24,7 @@
                 <div class="ibox">
                     <div class="ibox-content">
                         <div class="row"> <h3 class="col-lg-6">Help Request</h3>
-                            <a class="col-lg-6 text-right">See more</a> </div>
+                            <a class="col-lg-6 text-right" onclick="window.location = 'listall?type=request'">See more</a> </div>
                         <ul class="sortable-list connectList agile-list" id="helpList">
                             <!-- e aqui que entra o ajax-->
                         </ul>
