--- a/app/views/listall.html
+++ b/app/views/listall.html
@@ -14,23 +14,26 @@
             </div>
             <div class="ibox-content">
                 <form role="form" class="row">
-                    <div class="col-lg-2">
-                        <label for="exampleInputEmail2" class="sr-only">Email address</label>
-                        <input type="email" placeholder="Enter email" id="exampleInputEmail2"
+                    <div class="col-lg-3">
+                        <label for="mylocation" class="sr-only">Location</label>
+                        <input type="email" placeholder="Enter location to search" id="mylocation"
                                class="form-control">
                     </div>
-                    <div class="col-lg-2">
-                        <button data-toggle="dropdown" class=" col-lg-12 btn btn-white dropdown-toggle" type="button" aria-expanded="false">Action <span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
+                    <div class="m-b col-lg-3">
+                        <div class="input-group-btn">
+                            <button data-toggle="dropdown" class="col-lg-12 btn btn-white" type="button" aria-expanded="false">
+                                Categories <span class="caret"></span></button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">All</a></li>
+                                <li><a href="#">Doubts</a></li>
+                                <li><a href="#">Education</a></li>
+                                <li><a href="#">Events</a></li>
+                                <li><a href="#">Jobs</a></li>
+                                <li><a href="#">Volunteer</a></li>
+                            </ul>
+                        </div>
                     </div>
-
-                        <button class="col-lg-4 btn btn-white" type="submit">Sign in</button>
+                    <button class="col-lg-1 btn btn-success" type="submit">Go!</button>
                 </form>
 
                 <div class="wrapper wrapper-content  animated fadeInRight blog">
