--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,7 +3,7 @@
 <body class="gray-bg">
 <div class="middle-box text-center loginscreen animated fadeInDown">
     <div>
-        <h3>Welcome to Inneed</h3>
+        <h3>Welcome to InNeed</h3>
         <p>Login in. To see it in action.</p>
         <form class="m-t" role="form" action="main">
             <div class="form-group">
