--- a/app/views/listall.html
+++ b/app/views/listall.html
@@ -36,12 +36,18 @@
                     <button class="col-lg-1 btn btn-success" type="submit">Go!</button>
                 </form>
 
-                <div class="wrapper wrapper-content  animated fadeInRight blog">
-                    <div id="row-ticket" class="row">
 
-                    </div>
-                </div>
 
+            </div>
+        </div>
+    </div>
+    <div class="wrapper wrapper-content  animated fadeInRight blog">
+        <div class="row">
+            <div id="col1" class="col-lg-4">
+            </div>
+            <div id="col2" class="col-lg-4">
+            </div>
+            <div id="col3" class="col-lg-4">
             </div>
         </div>
     </div>
