--- a/app/views/listall.html
+++ b/app/views/listall.html
@@ -33,7 +33,7 @@
                             </ul>
                         </div>
                     </div>
-                    <button class="col-lg-1 btn btn-success" type="submit">Go!</button>
+                    <button type="button" class="col-lg-1 btn btn-success">Go!</button>
                 </form>
 
 
