--- a/app/views/sendMessage.html
+++ b/app/views/sendMessage.html
@@ -27,8 +27,8 @@
                     </div>
 
                     <div class="mail-body text-right tooltip-demo">
-                        <a href="mailbox.html" class="btn btn-sm btn-primary" data-toggle="tooltip" data-placement="top" title="Send"><i class="fa fa-reply"></i> Send</a>
-                        <a href="mailbox.html" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Discard email"><i class="fa fa-times"></i> Discard</a>
+                        <a id="sendMessageButton" class="btn btn-sm btn-primary" data-toggle="tooltip" data-placement="top" title="Send"><i class="fa fa-reply"></i> Send</a>
+                        <a  class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Discard email"><i class="fa fa-times"></i> Discard</a>
                     </div>
 
                 </div>
@@ -54,6 +54,7 @@
 
 <!-- iCheck -->
 <script src="../js/plugins/iCheck/icheck.min.js"></script>
+<script src="../js/sendMessage.js"></script>
 </body>
 
 </html>
